--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="ngydrag, y-axis, draganddrop, drag, drop, angular, demo, khasky" />
+	<meta name="keywords" content="vertical, yaxis, draganddrop, drag, drop, angular, demo, khasky" />
 	<meta name="description" content="" />
-	<title>NgYDrag - Demo</title>
+	<title>AngularJS Vertical Drag - Demo</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="../dist/ng-y-drag.min.css" />
